deploy: eb9a8b999e2e6cfdf967a51632d57d36c812b4a0

--- a/friends/index.html
+++ b/friends/index.html
@@ -84,6 +84,10 @@
 打CTF的师傅 / NUAA / owner of <a href=https://t.me/MiaoTonyChannel>@MiaoTonyChannel</a><br>
 <a href=https://miaotony.xyz/>https://miaotony.xyz/</a></p>
 </li>
+<li>
+<p>天真的小窝<br>
+<a href=http://bin.zmide.com>http://bin.zmide.com</a></p>
+</li>
 </ul>
 </main>
 <div id=comments>
