--- a/friends/index.html
+++ b/friends/index.html
@@ -31,11 +31,11 @@
 <ul>
 <li>
 <p>w568w<br>
-<a href=http://w568w.ml/>http://w568w.ml/</a></p>
+<a href=https://w568w.eu.org/>https://w568w.eu.org/</a></p>
 </li>
 <li>
 <p>HeYan的Bug杂货店<br>
-<a href=http://heyanle.com/>http://heyanle.com/</a></p>
+<a href=https://heyanle.com/>https://heyanle.com/</a></p>
 </li>
 <li>
 <p>神楽坂花火<br>
