deploy: 347c0f2f1f91e0a945e67ed344f8b0c65141fb33

--- a/friends/index.html
+++ b/friends/index.html
@@ -30,6 +30,11 @@
 <p>欢迎<a href=/about>联系窝</a> 交换友链呀\(^o^)/~</p>
 <ul>
 <li>
+<p>LeiWang1999&rsquo;s blog<br>
+计算所巨巨 / I love everything and create value.<br>
+<a href=https://leiblog.wang>https://leiblog.wang</a></p>
+</li>
+<li>
 <p>w568w<br>
 FDU大二在读<br>
 <a href=https://w568w.eu.org/>https://w568w.eu.org/</a></p>
