deploy: 5d72c22abfa6b39e9e8ea63ae18369f361a9d7dc

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.91.2">
+<meta name=generator content="Hugo 0.92.0">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Home | imlk's blog</title>
@@ -25,6 +25,13 @@
 </header>
 <hr>
 <ul class=postindex>
+<li>
+<div class=date>2022-01-18</div>
+<a href=/posts/domain-mail-with-spf/>使用SPF来保护你的域名邮箱</a>
+<div class=cats>
+<a href=https://blog.imlk.top/categories/security/>Security</a>
+</div>
+</li>
 <li>
 <div class=date>2022-01-12</div>
 <a href=/posts/migrating-to-btrfs/>从ext4迁移到btrfs</a>
