deploy: 6fc4fecab51c6673927de0227701c70979be0101

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=zh-cn>
 <head>
-<meta name=generator content="Hugo 0.92.0">
+<meta name=generator content="Hugo 0.92.2">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Home | imlk's blog</title>
@@ -25,6 +25,20 @@
 </header>
 <hr>
 <ul class=postindex>
+<li>
+<div class=date>2022-02-10</div>
+<a href=/posts/rax3000q-compile-qsdk/>从QSDK源码编译RAX3000Q所需的软件包</a>
+<div class=cats>
+<a href=https://blog.imlk.top/categories/router/>Router</a>
+</div>
+</li>
+<li>
+<div class=date>2022-01-29</div>
+<a href=/posts/rax3000q-get-shell/>中移RAX3000Q路由器解锁telnet/ssh及使用内置的OpenWrt</a>
+<div class=cats>
+<a href=https://blog.imlk.top/categories/router/>Router</a>
+</div>
+</li>
 <li>
 <div class=date>2022-01-18</div>
 <a href=/posts/domain-mail-with-spf/>使用SPF来保护你的域名邮箱</a>
