deploy: a12669ab53b8a1e35a69ee850e44b672ba74b8d0

--- a/dn42/index.html
+++ b/dn42/index.html
@@ -1,9 +1,9 @@
-<!doctype html><html lang=zh-cn><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>See you on DN42 network | imlk's blog</title><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/fonts.css><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel=stylesheet></head><body><header class=header><a class=logo href=/>imlk's Blog</a><nav><ul class=menu><li><a href=/>🏠Home</a></li><li><a href=/about/>👋About</a></li><li><a href=/archives/>📜Archives</a></li><li><a href=/friends/>🔗Friends</a></li><li><a href=/dn42/>🕸️DN42</a></li><li><a href=/index.xml>📢Subscribe</a></li></ul></nav></header><hr><div class=article-meta><h1><span class=title>See you on DN42 network</span></h1></div><main class=post-content><p>Hello，我是<code>AS4242421742</code>，目前有以下节点，欢迎与我peer</p><pre tabindex=0><code>👉 sjc1-us:
+<!doctype html><html lang=zh-cn><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>See you on DN42 network | imlk's blog</title><link rel=stylesheet href=/css/style.css><link rel=stylesheet href=/css/fonts.css><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel=stylesheet></head><body><header class=header><a class=logo href=/>imlk's Blog</a><nav><ul class=menu><li><a href=/>🏠Home</a></li><li><a href=/about/>👋About</a></li><li><a href=/archives/>📜Archives</a></li><li><a href=/friends/>🔗Friends</a></li><li><a href=/dn42/>🕸️DN42</a></li><li><a href=/index.xml>📢Subscribe</a></li></ul></nav></header><hr><div class=article-meta><h1><span class=title>See you on DN42 network</span></h1></div><main class=post-content><p>Hello，我是<code>AS4242421742</code>，目前有以下节点，欢迎与我peer</p><pre tabindex=0><code>👉 phx1-us:
 DN42 ip address:
 - 172.22.96.2/26
 - fd42:d2aa:8a0e::2/48
 wireguard:
-- public ip &amp; port: sjc1.us.dn42.imlk.top:2&lt;your last 4-digit ASN&gt;
+- public ip &amp; port: phx1.us.dn42.imlk.top:2&lt;your last 4-digit ASN&gt;
 - public key: 34s2HSa76GP/lfFjZsh0uhJly8rUXWl2JgO47BJsj2Q=
 - link-local IPv6 address: fe80::1742/64
 bird:
